--- a/app/static/css/list.css
+++ b/app/static/css/list.css
@@ -93,10 +93,10 @@ ul.js-items-list li{
 
 .js-scroll-list::-webkit-scrollbar {
     -webkit-appearance: none;
-    width: 2px;
+    width: 5px;
 }
 .js-scroll-list::-webkit-scrollbar-thumb {
-    border-radius: 0px;
+    border-radius: 4px;
     background-color: rgba(0,0,0,.5);
     -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
@@ -106,7 +106,7 @@ ul.js-items-list li{
     height: 7px;
 }
 .grid::-webkit-scrollbar-thumb {
-    border-radius: 4px;
+    border-radius: 5px;
     background-color: rgba(0,0,0,.5);
     -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
@@ -154,15 +154,15 @@ ul.js-items-list li{
 	overflow: hidden;
 }
 
-rect{
+rect.frame{
 	fill: none;
 	stroke: #ddd;
 }
 
 rect.page{
-	fill: #ff9;
-	stroke: #000;
-	fill-opacity: .7;
+	fill: none;
+	stroke: #999;
+	fill-opacity: .5;
 	cursor: move;
 }
 
