Home Page for CiteLists + FavIcon added

--- a/app/static/css/list.css
+++ b/app/static/css/list.css
@@ -2,6 +2,13 @@ body{
 	padding-top: 10px;
 }
 
+.my-nav{
+	margin-left: 50px;
+	margin-right: 50px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
 .grid{
 	position: relative;
 	width: 100%;
