--- a/app/templates/list/new_list_base.html
+++ b/app/templates/list/new_list_base.html
@@ -5,6 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Anand Sainath">
+	<link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
+	<link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
 
 	<!-- Bootstrap core CSS -->
 	<link rel="stylesheet" href="{{ url_for('static', filename='lib/bootstrap/css/bootstrap.min.css') }}">
@@ -23,23 +25,54 @@
 	<script src="{{ url_for('static', filename='js/list/longscroll.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/list/list.js') }}"></script>
 	
-	<title>List View</title>
+	<title>CiteLists, VIS 25 - All the Papers and Citations</title>
 </head>
 <body id="bodyContainer" ng-controller="ListViewController">
-	<div class="loader" ng-show="isLoading"></div>
+	<nav class="navbar navbar-default my-nav" role="navigation">
+		<div class="container-fluid">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">CiteLists</a>
+			</div>
 
-	<div class="row" style="padding: 10px;">
-		<div class="col-xs-4"></div>
-		<div class="col-xs-1">
-			<button type="button" class="btn btn-default" ng-click="addList()">Add List</button>
-		</div>
-		<div class="col-xs-7 btn-group text-right">
-			<button type="button" class="btn btn-default" ng-click="updateMode('Any')" ng-class="{true:'active', false:''}[mode=='Any']">Any</button>
-			<button type="button" class="btn btn-default" ng-click="updateMode('All')" ng-class="{true:'active', false:''}[mode=='All']">All</button>
-			<button type="button" class="btn btn-default" ng-click="updateMode('And')" ng-class="{true:'active', false:''}[mode=='And']">And</button>
-			<button type="button" class="btn btn-default" ng-click="updateMode('All-Any')" ng-class="{true:'active', false:''}[mode=='All-Any']">All-Any</button>
-		</div>
-	</div>
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="#">Home</a></li>
+				</ul>
+
+				<ul class="nav navbar-nav navbar-left">
+					<li><p class="navbar-text">Back to <a href="#" class="navbar-link">Vis25 Home</a></p></li>
+				</ul>
+
+				<!-- <button type="button" class="btn btn-default hidden" ng-click="addList()">Add List</button> -->
+				<span></span>
+				<p class="navbar-text">List Modes</p>
+				<div class="btn-group navbar-nav navbar-center">
+					<button type="button" class="btn btn-default navbar-btn" ng-click="updateMode('Any')" ng-class="{true:'active', false:''}[mode=='Any']">Any</button>
+					<button type="button" class="btn btn-default navbar-btn" ng-click="updateMode('All')" ng-class="{true:'active', false:''}[mode=='All']">All</button>
+					<button type="button" class="btn btn-default navbar-btn" ng-click="updateMode('And')" ng-class="{true:'active', false:''}[mode=='And']">And</button>
+					<button type="button" class="btn btn-default navbar-btn" ng-click="updateMode('All-Any')" ng-class="{true:'active', false:''}[mode=='All-Any']">All-Any</button>
+				</div>
+				
+				<!-- <form class="navbar-form navbar-left" role="search">
+					<div class="form-group">
+						<input type="text" class="form-control" placeholder="Search">
+					</div>
+					<button type="submit" class="btn btn-default">Submit</button>
+				</form>-->
+				
+			</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
+	</nav>
+
+	<div class="loader" ng-show="isLoading"></div>
 
 	<div class="grid" style="height: {{gridHeight|angular}}px;">
 		<div class="list-container" style="width: {{width|angular}}px;">
