--- a/app/templates/list/new_list_base.html
+++ b/app/templates/list/new_list_base.html
@@ -9,9 +9,9 @@
 	<link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
 
 	<!-- Bootstrap core CSS -->
-	<link rel="stylesheet" href="{{ url_for('static', filename='lib/bootstrap/css/bootstrap.min.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='libs/bootstrap/css/bootstrap.min.css') }}">
 	<!-- Custom styles for this template -->
-	<link rel="stylesheet" href="{{ url_for('static', filename='lib/bootstrap/css/starter-template.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='libs/bootstrap/css/starter-template.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/list.css') }}">
 	
 	<script src="{{ url_for('static', filename='bower_components/jquery/jquery.js') }}"></script>
@@ -21,7 +21,7 @@
 	<!--<script src="{{ url_for('static', filename='bower_components/react/react.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='bower_components/ngReact/ngReact.min.js') }}"></script>
 	<script type="text/jsx" src="{{url_for('static', filename='js/list/list-reactor.js')}}"></script>-->
-	<script src="{{ url_for('static', filename='lib/d3.v3.js') }}"></script>
+	<script src="{{ url_for('static', filename='libs/d3.v3.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/list/longscroll.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/list/list.js') }}"></script>
 	
