--- a/app/templates/list/list_base.html
+++ b/app/templates/list/list_base.html
@@ -7,9 +7,9 @@
 	<meta name="author" content="Anand Sainath">
 
 	<!-- Bootstrap core CSS -->
-	<link rel="stylesheet" href="{{ url_for('static', filename='lib/bootstrap/css/bootstrap.min.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='libs/bootstrap/css/bootstrap.min.css') }}">
 	<!-- Custom styles for this template -->
-	<link rel="stylesheet" href="{{ url_for('static', filename='lib/bootstrap/css/starter-template.css') }}">    
+	<link rel="stylesheet" href="{{ url_for('static', filename='libs/bootstrap/css/starter-template.css') }}">    
 
 	<title>List View</title>
 	<style type="text/css">
@@ -262,9 +262,9 @@
 		<!-- Bootstrap core JavaScript
 		================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script type="text/javascript" src="{{ url_for('static', filename='lib/jquery-2.1.1.min.js') }}"></script>
-		<script type="text/javascript" src="{{ url_for('static', filename='lib/bootstrap/js/bootstrap.min.js') }}"></script>
-		<script type="text/javascript" src="{{ url_for('static', filename='lib/d3.v3.js') }}"></script>
+		<script type="text/javascript" src="{{ url_for('static', filename='libs/jquery-2.1.1.min.js') }}"></script>
+		<script type="text/javascript" src="{{ url_for('static', filename='libs/bootstrap/js/bootstrap.min.js') }}"></script>
+		<script type="text/javascript" src="{{ url_for('static', filename='libs/d3.v3.js') }}"></script>
 
 		<script type="text/javascript">
 
