Changing lib -> libs

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -9,9 +9,9 @@
  <meta name="author" content="Anand Sainath">
 
  <!-- Bootstrap core CSS -->
- <link rel="stylesheet" href="{{ url_for('static', filename='lib/bootstrap/css/bootstrap.min.css') }}">
+ <link rel="stylesheet" href="{{ url_for('static', filename='libs/bootstrap/css/bootstrap.min.css') }}">
  <!-- Custom styles for this template -->
- <link rel="stylesheet" href="{{ url_for('static', filename='lib/bootstrap/css/starter-template.css') }}">    
+ <link rel="stylesheet" href="{{ url_for('static', filename='libs/bootstrap/css/starter-template.css') }}">    
 
  <title>Visual Analytics for Texts and Documents</title>
  {% endblock %}
@@ -124,8 +124,8 @@ td{
   	<!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script type="text/javascript" src="{{ url_for('static', filename='lib/jquery.min.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='lib/bootstrap/js/bootstrap.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='libs/jquery.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='libs/bootstrap/js/bootstrap.min.js') }}"></script>
     {% block script_content %}{% endblock %}
   </body>
   </html>
