Added the Vis25 link

--- a/app/templates/list/new_list_base.html
+++ b/app/templates/list/new_list_base.html
@@ -48,7 +48,7 @@
 				</ul>
 
 				<ul class="nav navbar-nav navbar-left">
-					<li><p class="navbar-text">Back to <a href="#" class="navbar-link">Vis25 Home</a></p></li>
+					<li><p class="navbar-text">Back to <a href="http://www.cc.gatech.edu/gvu/ii/citevis/VIS25/" class="navbar-link">Vis25 Home</a></p></li>
 				</ul>
 
 				<!-- <button type="button" class="btn btn-default hidden" ng-click="addList()">Add List</button> -->
