--- a/app/templates/list/new_list_base.html
+++ b/app/templates/list/new_list_base.html
@@ -25,7 +25,7 @@
 	<script src="{{ url_for('static', filename='js/list/longscroll.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/list/list.js') }}"></script>
 	
-	<title>CiteLists, VIS 25 - All the Papers and Citations</title>
+	<title>VISLists, VIS 25 - All the Papers and Citations</title>
 </head>
 <body id="bodyContainer" ng-controller="ListViewController">
 	<nav class="navbar navbar-default my-nav" role="navigation">
@@ -38,18 +38,18 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">CiteLists</a>
+				<a class="navbar-brand" href="#">VISLists</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Home</a></li>
+					<li class="active"><a href="http://www.cc.gatech.edu/gvu/ii/citevis/VIS25/">Back to Vis25</a></li>
 				</ul>
 
-				<ul class="nav navbar-nav navbar-left">
+				<!-- <ul class="nav navbar-nav navbar-left">
 					<li><p class="navbar-text">Back to <a href="http://www.cc.gatech.edu/gvu/ii/citevis/VIS25/" class="navbar-link">Vis25 Home</a></p></li>
-				</ul>
+				</ul> -->
 
 				<!-- <button type="button" class="btn btn-default hidden" ng-click="addList()">Add List</button> -->
 				<span></span>
@@ -67,6 +67,8 @@
 					</div>
 					<button type="submit" class="btn btn-default">Submit</button>
 				</form>-->
+
+				<p class="navbar-text navbar-right">Works best in <a class="navbar-link" href="https://www.google.com/chrome/">Google Chrome</a></p>
 				
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
