--- a/app/templates/list/new_list_base.html
+++ b/app/templates/list/new_list_base.html
@@ -24,6 +24,7 @@
 	<script src="{{ url_for('static', filename='libs/d3.v3.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/list/longscroll.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/list/list.js') }}"></script>
+	<script src="{{ url_for('static', filename='libs/jquery.noty.packaged.min.js') }}"></script>
 	
 	<title>VISLists, VIS 25 - All the Papers and Citations</title>
 </head>
@@ -83,6 +84,39 @@
 	</div>
 
 	<script type="text/javascript" src="{{url_for('static', filename='js/list/main.js')}}"></script>
+	<script type="text/javascript">
+
+		$(function(){
+			$.noty.defaults = {
+				layout: 'topCenter',
+				theme: 'defaultTheme',
+				type: 'alert',
+			    text: 'Loading Connections', // can be html or string
+			    dismissQueue: false, // If you want to use queue feature set this true
+			    template: '<div class="noty_message"><span class="noty_text"></span><div class="noty_close"></div></div>',
+			    animation: {
+			    	open: {height: 'toggle'},
+			    	close: {height: 'toggle'},
+			    	easing: 'swing',
+			        speed: 100 // opening & closing animation speed
+			    },
+			    timeout: false, // delay for closing event. Set false for sticky notifications
+			    force: false, // adds notification to the beginning of queue when set to true
+			    modal: false,
+			    maxVisible: 1, // you can set max visible notification for dismissQueue true option,
+			    killer: false, // for close all notifications before show
+			    closeWith: ['click'], // ['click', 'button', 'hover', 'backdrop'] // backdrop click will close all open notifications
+			    callback: {
+			    	onShow: function() {},
+			    	afterShow: function() {},
+			    	onClose: function() {},
+			    	afterClose: function() {}
+			    },
+			    buttons: false // an array of buttons
+			};
+		});
+        
+	</script>
 
 </body>
 </html>
