--- a/app/templates/list/new_list_base.html
+++ b/app/templates/list/new_list_base.html
@@ -75,6 +75,11 @@
 		</div><!-- /.container-fluid -->
 	</nav>
 
+	<div class="alert alert-warning alert-dismissible" role="alert">
+		<button type="button" id="closeBtn" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+		Select a value to be shown in the <strong>dropdown</strong> and click on the <strong>Add All</strong> button.
+	</div>
+
 	<div class="loader" ng-show="isLoading"></div>
 
 	<div class="grid" style="height: {{gridHeight|angular}}px;">
@@ -87,6 +92,9 @@
 	<script type="text/javascript">
 
 		$(function(){
+
+			$('#closeBtn').click(function(){ $(this).parent().remove(); });
+
 			$.noty.defaults = {
 				layout: 'topCenter',
 				theme: 'defaultTheme',
