--- a/app/templates/list/new_list_base.html
+++ b/app/templates/list/new_list_base.html
@@ -77,7 +77,7 @@
 
 	<div class="alert alert-warning alert-dismissible" role="alert">
 		<button type="button" id="closeBtn" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-		Select a value to be shown in the <strong>dropdown</strong> and click on the <strong>Add All</strong> button.
+		<strong>Choose an attribute</strong> in the dropdown and click on the <strong>Add All</strong> button.
 	</div>
 
 	<div class="loader" ng-show="isLoading"></div>
