--- a/app/templates/list/new_list_base.html
+++ b/app/templates/list/new_list_base.html
@@ -75,15 +75,15 @@
 		</div><!-- /.container-fluid -->
 	</nav>
 
-	<div class="alert alert-warning alert-dismissible" role="alert">
+	<!-- <div class="alert alert-warning alert-dismissible" role="alert">
 		<button type="button" id="closeBtn" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
 		<strong>Choose an attribute</strong> in the dropdown and click on the <strong>Add All</strong> button.
-	</div>
+	</div> -->
 
 	<div class="loader" ng-show="isLoading"></div>
 
 	<div class="grid" style="height: {{gridHeight|angular}}px;">
-		<div class="list-container" style="width: {{width|angular}}px;">
+		<div class="list-container" style="width: {{width|angular}}px; margin-left: 35px;">
 			<my-list-component bindonce ng-repeat="list_index in lists track by $index"></my-list-component>
 		</div>
 	</div>
