--- a/app/templates/list/new_list_base.html
+++ b/app/templates/list/new_list_base.html
@@ -17,12 +17,12 @@
 	<script src="{{ url_for('static', filename='bower_components/jquery/jquery.js') }}"></script>
 	<script src="{{ url_for('static', filename='bower_components/angular/angular.js') }}"></script>
 	<script src="{{ url_for('static', filename='bower_components/angular-bindonce/bindonce.min.js') }}"></script>
-	<script src="{{ url_for('static', filename='bower_components/nginfinitescroll/build-src/ng-infinite-scroll.js') }}"></script>
+	<script src="{{ url_for('static', filename='bower_components/nginfinitescroll/build/ng-infinite-scroll.min.js') }}"></script>
 	<!--<script src="{{ url_for('static', filename='bower_components/react/react.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='bower_components/ngReact/ngReact.min.js') }}"></script>
 	<script type="text/jsx" src="{{url_for('static', filename='js/list/list-reactor.js')}}"></script>-->
 	<script src="{{ url_for('static', filename='libs/d3.v3.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/list/longscroll.js') }}"></script>
+	<!--<script src="{{ url_for('static', filename='js/list/longscroll.js') }}"></script>-->
 	<script src="{{ url_for('static', filename='js/list/list.js') }}"></script>
 	<script src="{{ url_for('static', filename='libs/jquery.noty.packaged.min.js') }}"></script>
 	
