--- a/app/static/css/list.css
+++ b/app/static/css/list.css
@@ -109,6 +109,7 @@ ul.js-items-list li{
 	width: 286px;
 	padding: 0px;
 	overflow: hidden;
+	float: left;
 }
 
 .scroller{
@@ -117,11 +118,7 @@ ul.js-items-list li{
 }
 
 .restrict {
-	/*overflow-x: hidden;
-	overflow-y: scroll;*/
-	/*height: 550px;*/
 	width: 286px;
-	/*margin: 0 auto;*/
 }
 
 
