--- a/app/templates/list/tutorial.html
+++ b/app/templates/list/tutorial.html
@@ -21,9 +21,9 @@
 <div class="container">
 
 	<div class="jumbotron">
-		<h1>ListVIS</h1>
+		<h1>VISLists</h1>
 
-		<p>The VISLists visualization summarizes all papers and authors from the IEEE VIS Conferences (VAST, InfoVis, SciVis).</p>
+		<p>This visualization summarizes all papers and authors from the IEEE VIS Conferences (VAST, InfoVis, SciVis).</p>
 	</div>
 	
 	<h1 id="type" class="page-header">Interactions</h1>
