Footer only in tutorial

--- a/app/templates/list/tutorial.html
+++ b/app/templates/list/tutorial.html
@@ -55,5 +55,10 @@
 
 	<h3>All-Any</h3>
 	<p>Connected items are considered to be entities that are connected to at least one selected entity from each list. That is, this mode is like doing an “AND” between lists but an “OR” within a list. So, for example, if one conference is selected and three years are selected, then the connected authors will be people who published a paper at that conference during any one or more of those selected years.</p>
+
+	
+	<footer class="footer">
+        <p>II Lab - Georgia Institute of Technology</p>
+    </footer>
 </div>
 {% endblock %}
