--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -11,7 +11,7 @@ body {
 }
 
 .footer {
-	margin: 5px 50px;
+	/*margin: 5px 50px;*/
 	padding-top: 19px;
 	color: #777;
 	border-top: 1px solid #e5e5e5;
