All mode corrected.

--- a/app/templates/list/viz.html
+++ b/app/templates/list/viz.html
@@ -22,7 +22,7 @@
 
 {% block toolbar_header_left_link_content %}
 	<li class="active"><a href="http://www.cc.gatech.edu/gvu/ii/citevis/VIS25/">Back to Vis25</a></li>
-	<li class="divider"><a href="/list/tutorial">Tutorial</a></li>
+	<li class="divider"><a href="/list/tutorial">Help</a></li>
 {% endblock %}
 
 {% block toolbar_page_content %}
