Mongoengine replaced by PyMongo, landing page changed and changes to the list view scroller

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -1,10 +1,11 @@
-body {
+/*body {
 	padding-top: 10px;
 }
-
-.my-nav {
+*/
+/*.my-nav {
 	margin: 5px 50px;
 }
+*/
 
 .divider{
 	border-right: 3px solid #E7E7E7;
