--- a/app/static/libs/bootstrap/css/starter-template.css
+++ b/app/static/libs/bootstrap/css/starter-template.css
@@ -1,7 +1,11 @@
-body {
+/*body {
   padding-top: 50px;
 }
 .starter-template {
   padding: 40px 15px;
   text-align: center;
+}
+*/
+body {
+  padding-top: 70px;
 }
