--- a/app/templates/data/markup.html
+++ b/app/templates/data/markup.html
@@ -16,7 +16,7 @@ Document Markup
 	}
 </style>
 
-<script src="{{ url_for('static', filename='bower_components/jquery/jquery.js') }}"></script>
+<script src="{{ url_for('static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
 <script src="{{ url_for('static', filename='bower_components/angular/angular.js') }}"></script>
 <script src="{{ url_for('static', filename='bower_components/angular-bindonce/bindonce.min.js') }}"></script>
 <script src="{{ url_for('static', filename='bower_components/angular-virtual-scroll/angular-virtual-scroll.min.js') }}"></script>
