--- a/app/templates/viz.html
+++ b/app/templates/viz.html
@@ -17,6 +17,7 @@
 	<script src="{{ url_for('static', filename='bower_components/angular-virtual-scroll/angular-virtual-scroll.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='libs/d3.v3.js') }}"></script>
 	
+	<script src="{{ url_for('static', filename='libs/jStorage/jstorage.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/list/list.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/document/document.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/grid/grid.js') }}"></script>
