Highlighting of selected word in the document viewer

--- a/app/static/css/document.css
+++ b/app/static/css/document.css
@@ -126,3 +126,13 @@
 .clicked{
 	border: 2px solid #FEF935 !important;
 }
+
+.selected-tag-item{
+	font-weight: bold !important;
+}
+
+.highlight {
+    font-weight: bolder !important;
+    color: #000 !important;
+    background-color: #FFFF88;
+}
