--- a/app/templates/viz.html
+++ b/app/templates/viz.html
@@ -22,6 +22,7 @@
 	<script src="{{ url_for('static', filename='js/document/document.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/grid/grid.js') }}"></script>
 	<script src="{{ url_for('static', filename='libs/bootstrap-slider.js') }}"></script>
+	<script src="{{ url_for('static', filename='libs/jquery.highlight.js') }}"></script>
 
 	<script src="{{ url_for('static', filename='libs/jquery.noty.packaged.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='libs/bootstrap/js/bootstrap.min.js') }}"></script>
